--- a/docs/测试说明.md
+++ b/docs/测试说明.md
@@ -179,7 +179,7 @@ FlowCheck 高级数据测试程序
 
 ## 注意事项
 
-1. 测试程序需要访问 `/Users//Documents/work/flowcheck/data/` 目录
-2. 如果数据目录路径不同，需要修改测试程序中的 `dataDir` 变量
+1. 测试程序需要访问项目根目录下的 `data/` 目录
+2. 测试程序使用相对路径 `../data`（相对于 build 目录）
 3. `test_data_advanced` 默认限制处理 50 个 TCP 流和 50 个 UDP 流，可以修改代码中的限制
 4. 所有测试都使用 FlowEngine 单例，确保 DNS 缓存在测试之间共享
